# vhs-restoration-pipeline

./: LICENSE  README.md  VHS_Restoration_Roadmap.md  pyproject.toml  test_adaptive.py  test_run.py
examples/: custom_config.json
vhs_restore/: __init__.py  adaptive.py  analyze.py  cli.py  config.py  pipeline.py  scene_detect.py
vhs_restore/presets/: aggressive.json  balanced.json  safe.json  vhs_gentle.json
vhs_restore/steps/: __init__.py  base.py  color.py  deinterlace.py  denoise.py  sharpen.py  stabilize.py  upscale.py
